--- a/pong.kv
+++ b/pong.kv
@@ -1,6 +1,7 @@
 #:kivy 1.10.0
-#:import isdir Pong.PongBall
-#:import isdir Pong.PongGame
+#:import isdir PongBall
+#:import isdir PongPaddle
+#:import isdir PongGame
 
 <PongBall>:
     size: 50, 50
@@ -9,9 +10,18 @@
             pos: self.pos
             size: self.size
 
+<PongPaddle>:
+    size: 25, 200
+    canvas:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
 
 <PongGame>:
     ball: pong_ball
+    player1: player_left
+    player2: player_right
 
     canvas:
         Rectangle:
@@ -22,15 +32,24 @@
         font_size: 70
         center_x: root.width / 4
         top: root.top - 50
-        text: "0"
+        text: str(root.player1.score)
 
     Label:
         font_size: 70
         center_x: root.width * 3 / 4
         top: root.top - 50
-        text: "0"
+        text: str(root.player2.score)
 
     PongBall:
         id: pong_ball
         center: self.parent.center
 
+    PongPaddle:
+        id: player_left
+        x: root.x
+        center_y: root.center_y
+
+    PongPaddle:
+        id: player_right
+        x: root.width - self.width
+        center_y: root.center_y
